# repoTemplatePython

./: .bumpversion.cfg  Makefile  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: lint.yml  pr.yml  publish.yml  tests.yml
PY_PACKAGE_NAME/: core.py
YOUR_PACKAGE_NAME/: core.py
docs/: doc.md
tests/unit/: core.py  test_core.py
